[package]
name = "shadowsocks"
version = "1.18.1"
authors = ["Shadowsocks Contributors"]
description = "shadowsocks is a fast tunnel proxy that helps you bypass firewalls."
repository = "https://github.com/shadowsocks/shadowsocks-rust"
readme = "README.md"
documentation = "https://docs.rs/shadowsocks-core"
keywords = ["shadowsocks", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2021"
rust-version = "1.71"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = [
    "hickory-dns",
    "flow-stat",
    "rate-limit",
    "transport-ws",
    # "transport-restls",
    "transport-tls",
    "transport-mkcp",
    "transport-skcp",
    "trojan",
    "vless",
    "wireguard",
    "aead-cipher-2022",
]

# Uses Hickory-DNS instead of tokio's builtin DNS resolver
hickory-dns = ["hickory-resolver", "arc-swap", "notify"]
# Hickory-DNS was renamed from Trust-DNS, keep compatibility.
trust-dns = ["hickory-dns"]

# Enable Stream Cipher Protocol
# WARN: Stream Cipher Protocol is proved to be insecure
# https://github.com/shadowsocks/shadowsocks-rust/issues/373
# Users should always avoid using these ciphers in practice
stream-cipher = ["shadowsocks-crypto/v1-stream"]

# Enable extra AEAD ciphers
# WARN: These non-standard AEAD ciphers are not officially supported by shadowsocks community
aead-cipher-extra = ["shadowsocks-crypto/v1-aead-extra"]

# Enable AEAD 2022
aead-cipher-2022 = [
    "shadowsocks-crypto/v2",
    "rand/small_rng",
    "aes",
    "lru_time_cache",
]
# Enable AEAD 2022 with extra ciphers
aead-cipher-2022-extra = ["aead-cipher-2022", "shadowsocks-crypto/v2-extra"]

# Enable detection against replay attack
security-replay-attack-detect = ["bloomfilter"]

transport = []
transport-ws = ["transport", "sha1"]
transport-tls = ["transport", "tokio-rustls", "webpki", "rustls", "rustls-native-certs", "rustls-pemfile"]
transport-mkcp = ["transport", "arc-swap", "rand"]
transport-skcp = ["transport"]
transport-restls = ["anyhow", "tokio-util", "hmac", "sha1"]
flow-stat = []
statistics = ["metrics"]

trojan = ["rand"]
vless = ["rand", "hex"]
tuic = ["byteorder", "quinn", "parking_lot", "crossbeam-utils", "rustls", "rustls-native-certs", "rustls-pemfile"]
wireguard = ["parking_lot", "hex", "chacha20poly1305", "ring", "ip_network_table", "ip_network", "x25519-dalek",  "blake2", "hmac"]

rate-limit = ["governor", "nonzero_ext", "futures-timer", "quanta", "lazy_static", "regex"]

[dependencies]
tracing = "0.1.35"
metrics = { version = "0.20", optional = true }

libc = "0.2.141"
bytes = "1.5"
cfg-if = "1"
byte_string = "1.0"
base64 = "0.22"
url = "2.5"
once_cell = "1.17"
spin = { version = "0.9", features = ["std"] }
pin-project = "1.1"
bloomfilter = { version = "1.0.8", optional = true }
thiserror = "1.0"
rand = { version = "0.8", optional = true }
lru_time_cache = { version = "0.11", optional = true }

untrusted = { version = "0.9.0", optional  = true }
ip_network = { version = "0.4.1", optional = true }
ip_network_table = { version = "0.2.0", optional = true }
ring = { version = "0.16", optional = true }
x25519-dalek = { version = "2.0.0-pre.2", features = ["reusable_secrets", "static_secrets"], optional = true }
blake2 = { version = "^0.10", optional = true }
chacha20poly1305 = { version = "0.10.0-pre.1", optional = true }
aead = "0.5.0-pre.2"

hex = { version = "0.4.3", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
percent-encoding = "2.1"

futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"
memchr = "*"

socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.9.0", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "sync",
    "time",
] }
tokio-tfo = "0.2.0"
tokio-rustls = { version = "0.23.4", optional = true }
tokio-util = { version = "*", features = ["codec"], optional = true}
webpki = { version = "0.22", optional = true }
anyhow = { version = "1.0.68", optional = true }
hmac = { version = "^0.12", optional = true }
sha1 = { version = "^0.10.5", optional = true }

governor = { version = "0.3.2", optional = true }
nonzero_ext = { version = "0.2", optional = true }
futures-timer = { version = "3.0.2", optional = true }
quanta = { version = "0.4.1", optional = true }
lazy_static = { version = "1", optional = true }
regex = { version = "1.4", optional = true }

hickory-resolver = { version = "0.24", optional = true }
arc-swap = { version = "1.7", optional = true }
notify = { version = "6.0", optional = true }

aes = { version = "0.8", optional = true }
blake3 = "1.4"

byteorder = { version = "1.4", optional = true }
crossbeam-utils = { version = "0.8", default-features = false, optional = true }
parking_lot = { version = "0.12", optional = true }
quinn = { version = "0.8", optional = true }
rustls = { version = "0.20", features = ["quic", "dangerous_configuration"], default-features = false, optional = true }
rustls-native-certs = { version = "0.6", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
# chrono = "*"

sha2 = { version = "0.10"}
aes-gcm = { version = "0.10.3"}

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
shadowsocks-crypto = { version = "0.5.4", features = ["ring"] }

[target.'cfg(not(any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
shadowsocks-crypto = { version = "0.5.4", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }

[target.'cfg(unix)'.dependencies]
sendfd = { version = "0.4", features = ["tokio"] }

[target.'cfg(target_os="macos")'.dependencies]
nix = "0.24.1"

[dev-dependencies]
tracing-test = { version = "*", features = ["no-env-filter"] }
scopeguard = "1.1.0"
assert_matches = "1.5.0"
mockall = "*"
tokio-test = "*"
pnet = "^0.27"
proptest = "^0.10"
rand_chacha = "^0.3"
